--- a/style.css
+++ b/style.css
@@ -2,25 +2,117 @@
   box-sizing: border-box;
 }
 
+div {
+  border: 1px solid springgreen;
+}
+
 body {
   font-family: "Quicksand", sans-serif;
   text-align: justify;
-  color: steelblue;
   padding: 0;
   margin: 0;
 }
 
-/* .jumbroton {
-  font-size: 20px;
-  padding: 60px;
-  background-color: #00c8eb;
-  text-align: center;
-  color: white;
-} */
 .image-highlight {
-  margin-top: 50px;
+  margin-bottom: -4px;
   width: 100%;
 }
+
+/* Nav Bar Hidden Start */
+#navbar {
+  /* background: linear-gradient(6deg, rgba(6, 32, 148, 1) 0%, rgba(11, 91, 148, 1) 30%, rgba(0, 212, 255, 1) 100%); */
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 90px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  transition: top 0.3s;
+}
+
+#navbar a {
+  font-size: 30px;
+}
+
+#navbar a:hover {
+  /* height: 90px; */
+  width: auto;
+  /* margin: 10px; */
+  background-color: #ddd;
+  color: black;
+  /* display: flex; */
+  /* align-items: center; */
+}
+
+.logo-moonton {
+  /* width: ; */
+  max-height: 90px;
+  object-fit: cover;
+  object-position: center;
+  /* border-radius: 50%; */
+}
+
+.navbar-links {
+  display: flex;
+  justify-content: flex-end;
+}
+
+/* navbar end */
+.home {
+  margin-right: 30px;
+}
+
+/* Nav Bar Hidden End */
+
+/* Tab Style Start */
+.tab {
+  overflow: hidden;
+  /* border: 1px solid #ccc; */
+  background-color: rgb(47, 91, 201);
+  /* background: linear-gradient(180deg, rgba(9, 31, 132, 1) 2%, rgba(11, 91, 148, 1) 25%, rgba(0, 212, 255, 1) 100%); */
+  height: 90px;
+  display: flex;
+  justify-content: space-around;
+
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  color: #ddd;
+  font-size: 25px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #5E89F9;
+  color: black;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  -webkit-animation: fadeEffect 1s;
+  animation: fadeEffect 1s;
+  text-align: center;
+}
+
+/* Tab Style End */
 
 h2,
 h3 {
@@ -34,10 +126,6 @@ main {
   overflow: auto;
 }
 
-#content {
-  width: 75%;
-  float: left;
-}
 
 aside {
   float: right;
@@ -47,42 +135,131 @@ aside {
 
 .card {
   box-shadow: 0 4px 8px 5px rgba(0, 0, 0, 0.2);
-  /* border-radius: 20px; */
   padding: 20px;
-  margin-top: 20px;
 }
 
-.card2 {
-  border-style: solid;
-  /* box-shadow: 0 4px 8px 5px rgba(0, 0, 0, 0.2); */
-  border-radius: 20px;
-  padding: 20px;
-  margin-top: 20px;
-  width: 100%;
+.title-roles-hero-container,
+.list-hero-logo-container {
+  display: flex;
+  justify-content: flex-start;
+  width: 600px;
 }
 
-.featured-image {
-  width: 200px;
-  max-height: 534px;
-  object-fit: cover;
-  object-position: center;
+.title-roles-grid {
+  width: 500px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  font-size: 30px;
 }
 
-.featured-image-pp {
-  width: 100%;
-  max-height: 534px;
-  object-fit: cover;
-  object-position: center;
-  border-radius: 50%;
+/* icon hero start */
+.icon-hereos {
+  display: inline-flex;
 }
 
-.profile {
+.list-hero-logo-grid {
+  width: 600px;
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+
+.bg-box-icon-hero {
+  background-color: #DB631F;
+  width: 150px;
+  height: 200px;
+  margin: 10px;
+}
+
+.value-icon {
+  display: flex;
+  flex-direction: column;
+}
+
+.img-icon-size {
+  width: 150px;
+}
+
+.hero-name {
+  display: flex;
+  justify-content: center;
+  font-size: 30px;
+  font-family: Roboto;
+  font-weight: bold;
+  color: white;
+}
+
+/* icon hero end */
+
+/* detail hero start */
+.parent-detail-hero {
+  width: 800px;
+}
+
+.img-hero {
   text-align: center;
 }
 
-.profile img {
-  width: 200px;
+.title-hero {
+  text-align: center;
+  font-size: 50px;
+  font-weight: bold;
 }
+
+.hr-space-hero {
+  margin-left: 30px;
+  margin-right: 30px;
+  border: 6px solid #000000;
+}
+
+.info-hc-container {
+  margin-left: 70px;
+  margin-right: 70px;
+  margin-top: 20px;
+}
+
+.info-hc-grid,
+.battle-point-grid,
+.ticket-grid {
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.role-title,
+.speciality-title {
+  font-size: 30px;
+}
+
+.role-value,
+.battle-point-value,
+.ticket-value,
+.diamond-value,
+.speciality-value {
+  font-size: 15px;
+}
+
+.cost-title {
+  display: flex;
+  justify-content: flex-end;
+  font-size: 30px;
+}
+
+.logo-cost {
+  margin-left: 15px;
+  width: 15px;
+}
+
+.speciality-container {
+  margin-left: 70px;
+  margin-right: 70px;
+}
+
+/* detail hero start end */
+
+
+/*  */
 
 footer {
   padding: 20px;
@@ -109,78 +286,12 @@ footer {
   }
 }
 
-/* Nav Bar Hidden Start */
-#navbar {
-  background-color: #333;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  display: block;
-  transition: top 0.3s;
-}
-
-#navbar a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 15px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-#navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Nav Bar Hidden End */
 
 
-/* Tab Style */
-/* Style the tab */
-.tab {
-  overflow: hidden;
-  /* border: 1px solid #ccc; */
-  background-color: #1ea9e0;
-  margin-top: -5px;
-}
 
-/* Style the buttons inside the tab */
-.tab button {
-  background-color: inherit;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-  font-size: 17px;
-}
 
-/* Change background color of buttons on hover */
-.tab button:hover {
-  background-color: #ddd;
-}
 
-/* Create an active/current tablink class */
-.tab button.active {
-  background-color: #ccc;
-}
 
-/* Style the tab content */
-.tabcontent {
-  display: none;
-  padding: 6px 12px;
-  -webkit-animation: fadeEffect 1s;
-  animation: fadeEffect 1s;
-  text-align: center;
-}
-
-.img-logo-hero {
-  border-radius: 100px;
-  width: 100px;
-}
 
 /* Fade in tabs */
 @-webkit-keyframes fadeEffect {
@@ -215,40 +326,35 @@ footer {
 
 /* css e skill hero end */
 
-/* Atribute */
-.mw-headline {
+/* Atribute Start */
+.hero-attributes {
+  width: 800px;
   text-align: center;
 }
 
-.hero-attributes {
-  text-align: right;
+.mw-headline {
+  text-align: center;
+  margin: 0;
+}
 
+.attributes-container {
+  display: flex;
+  justify-content: center;
 }
 
 .attributes {
-  /* display: flex;
-  flex-direction: column;
-  justify-content: space-between; */
-  /* padding-top: 0; */
-  /* font-size: 5px; */
-  /* padding-left: 10px; */
   text-transform: uppercase;
-  /* font-weight: 700; */
   width: 380px;
-
   display: flex;
   flex-wrap: wrap;
-  /* background-color: DodgerBlue; */
   justify-content: space-between;
 }
 
 .attributes>div {
-  /* background-color: #f1f1f1; */
   width: 80px;
   margin: 2px;
   margin-top: 10px;
   text-align: center;
-  /* line-height: 75px; */
   font-size: 10px;
   align-self: center;
 
@@ -299,3 +405,37 @@ footer {
 .layout-img-skill {
   align-self: center;
 }
+
+/* gak jelas */
+
+
+.img-logo-hero {
+  border-radius: 100px;
+  width: 100px;
+  margin: 10px;
+}
+
+.featured-image {
+  width: 200px;
+  max-height: 534px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.featured-image-pp {
+  width: 100%;
+  max-height: 534px;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 50%;
+}
+
+.profile {
+  text-align: center;
+}
+
+.profile img {
+  width: 200px;
+}
+
+/* gak jelas end */
