--- a/style.css
+++ b/style.css
@@ -136,12 +136,14 @@ aside {
 .card {
   box-shadow: 0 4px 8px 5px rgba(0, 0, 0, 0.2);
   padding: 20px;
+  display: flex;
+  flex-direction: row;
 }
 
 .title-roles-hero-container,
 .list-hero-logo-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   width: 600px;
 }
 
@@ -156,6 +158,7 @@ aside {
 /* icon hero start */
 .icon-hereos {
   display: inline-flex;
+  width: 500px;
 }
 
 .list-hero-logo-grid {
@@ -194,7 +197,7 @@ aside {
 
 /* detail hero start */
 .parent-detail-hero {
-  width: 800px;
+  width: 650px;
 }
 
 .img-hero {
@@ -316,7 +319,7 @@ footer {
 
 /* Atribute Start */
 .hero-attributes {
-  width: 800px;
+  width: 650px;
   text-align: center;
 }
 
@@ -332,7 +335,7 @@ footer {
 
 .attributes {
   text-transform: uppercase;
-  width: 380px;
+  width: 400px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -351,7 +354,7 @@ footer {
 /* Atribute End*/
 /* Skill Style Start */
 .skill-container {
-  width: 800px;
+  width: 650px;
 }
 
 .layout-skill {
@@ -386,6 +389,7 @@ footer {
 
 .description-skill {
   padding-left: 20px;
+  display: flex;
 }
 
 /* Skill Style End */
